     awn-manager, not needed anymore.
   - Add python-gtk2 as depends for python-awn.
   - Remove depends on avant-window-navigator for awn-manager to avoid 
     circular dependency. This is unnecessary until awn depends on awn-manager
     for the migration script. (Closes: #520120).
   - Add libgnome-desktop-dev and libdbus-glib-1-dev as depends for libawn-dev.

 -- Julien Lavergne <julien.lavergne@gmail.com>  Fri, 17 Apr 2009 22:37:03 +0200

avant-window-navigator (0.3.2-1) unstable; urgency=low

  * New upstream release (Closes : #514681) (LP: #327443)
   - Add a script to delay the start of awn when using the autostart. 
     (Closes: #493640)
   - Fix awn-manager permission when trying to edit some desktop file 
    (LP: #260987)
   - Update position on screen resolution changes (LP: #276734)
  * debian/awn.wrapper
   - A script to update applets path using awn-applets-migration script.
  * debian/*.install: 
   - Add the themes directory to avant-window-navigator-data.install.
   - Add awn-autostart to avant-window-navigator.install.
   - Add awn-applets-migration to awn-manager.install.
   - Remove usr/bin/avant-window-navigator, handle by debian/rules.
   - Install python bindings in *-packages instead of site-packages only, 
     needed for the python migration in squeeze (LP: #335785).
  * debian/control:
   - Add missing ${misc:Depends}.
   - Bump Build-Depends and Depends for vala to (>= 0.5.4).
   - Set awn-manager as Depends rather than Recommends, needed by the 
     awn-applets-migration script.
   - Remove unnecessary "Section: gnome"
   - Note that the libawn0-dbg contains debuggins symbols.
   - Set Build-Depends on python (>= 2.5) instead of hardcoding the python 
     version.
  * debian/awn-autostart.1 & debian/awn-applets-migrations:
   - Add new man pages.
  * debian/avant-window-navigator.links
   - Symlink awn.1 with avant-window-navigator.1
  * debian/rules:
   - Move avant-window-navigator to awn, and copy awn.wrapper to 